--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,11 @@
 {
   "search": {
     "placeholder": "Поиск города"
+  },
+  "periods": {
+    "morning": "утром",
+    "day": "днем",
+    "evening": "вечером",
+    "night": "ночью"
   }
 }
