--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,11 @@
 {
   "search": {
     "placeholder": "Type a city name"
+  },
+  "periods": {
+    "morning": "morning",
+    "day": "day",
+    "evening": "evening",
+    "night": "night"
   }
 }
