--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,43 @@
     "day": "day",
     "evening": "evening",
     "night": "night"
+  },
+  "description": {
+    "today": "Today is",
+    "colder": "colder",
+    "warmer": "warmer",
+    "same": "the same",
+    "than_yesterday": "than yesterday",
+    "and": "and",
+    "weathercode": {
+      "0": "clear",
+      "1": "mainly clear",
+      "2": "partly cloudy",
+      "3": "overcast",
+      "45": "fog",
+      "48": "depositing rime fog",
+      "51": "light drizzle",
+      "53": "moderate drizzle",
+      "55": "dense drizzle",
+      "56": "light freezing drizzle",
+      "57": "dense reezing drizzle",
+      "61": "slight rain",
+      "63": "moderate rain",
+      "65": "heavy rain",
+      "66": "light freezing rain",
+      "67": "heavy freezing rain",
+      "71": "slight snow fall",
+      "73": "moderate snow fall",
+      "75": "heavy snow fall",
+      "77": "snow grains",
+      "80": "slight rain showers",
+      "81": "moderate rain showers",
+      "82": "violent rain showers",
+      "85": "slight snow showers",
+      "86": "heavy snow showers",
+      "95": "thunderstorm",
+      "96": "thunderstorm with slight hail",
+      "99": "thunderstorm with heavy hail"
+    }
   }
 }
