--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,43 @@
     "day": "днем",
     "evening": "вечером",
     "night": "ночью"
+  },
+  "description": {
+    "today": "Сегодня",
+    "colder": "холоднее",
+    "warmer": "теплее",
+    "same": "так же",
+    "than_yesterday": "чем вчера",
+    "and": "и",
+    "weathercode": {
+      "0": "ясно",
+      "1": "преимущественно ясно",
+      "2": "облачно",
+      "3": "пасмурно",
+      "45": "туман",
+      "48": "изморозь",
+      "51": "легкая морось",
+      "53": "морось",
+      "55": "густая морось",
+      "56": "легкая замораживающая морось",
+      "57": "густая замораживающая морось",
+      "61": "небольшой дождь",
+      "63": "дождь",
+      "65": "сильный дождь",
+      "66": "легкий замораживающий дождь",
+      "67": "сильный замораживающий дождь",
+      "71": "небольшой снегопад",
+      "73": "снегопад",
+      "75": "сильный снегопад",
+      "77": "град",
+      "80": "легкий ливень",
+      "81": "ливень",
+      "82": "сильный ливень",
+      "85": "небольшой снегопад",
+      "86": "сильный снегопад",
+      "95": "гроза",
+      "96": "гроза с небольшим градом",
+      "99": "гроза с градом"
+    }
   }
 }
