--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -45,5 +45,13 @@
       "96": "гроза с небольшим градом",
       "99": "гроза с градом"
     }
+  },
+  "forecast": {
+    "week_forecast": "Погода на неделю",
+    "day": "День",
+    "temperature": "Температура",
+    "precipitation": "Осадки",
+    "wind": "Ветер",
+    "mc": "м/с"
   }
 }
