--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -45,5 +45,13 @@
       "96": "thunderstorm with slight hail",
       "99": "thunderstorm with heavy hail"
     }
+  },
+  "forecast": {
+    "week_forecast": "Week forecast",
+    "day": "Day",
+    "temperature": "Temperature",
+    "precipitation": "Precipitation",
+    "wind": "Wind",
+    "mc": "m/s"
   }
 }
