Show first forecast item as tomorrow

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -52,6 +52,7 @@
     "temperature": "Temperature",
     "precipitation": "Precipitation",
     "wind": "Wind",
-    "mc": "m/s"
+    "mc": "m/s",
+    "tomorrow": "Tomorrow"
   }
 }
