--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -52,6 +52,7 @@
     "temperature": "Температура",
     "precipitation": "Осадки",
     "wind": "Ветер",
-    "mc": "м/с"
+    "mc": "м/с",
+    "tomorrow": "Завтра"
   }
 }
