--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -54,5 +54,13 @@
     "wind": "Ветер",
     "mc": "м/с",
     "tomorrow": "Завтра"
+  },
+  "uv": {
+    "uv_index": "УФ индекс",
+    "low": "низкий",
+    "moderate": "средний",
+    "high": "высокий",
+    "very_high": "очень высокий",
+    "extreme": "экстремальный"
   }
 }
