--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -62,5 +62,21 @@
     "high": "высокий",
     "very_high": "очень высокий",
     "extreme": "экстремальный"
+  },
+  "wind": {
+    "wind": "Ветер",
+    "0": "Штиль",
+    "1": "Тихий ветер",
+    "2": "Легкий ветерок",
+    "3": "Легкий ветер",
+    "4": "Умеренный ветер",
+    "5": "Свежий ветер",
+    "6": "Сильный ветер",
+    "7": "Очень сильный ветер",
+    "8": "Шторм",
+    "9": "Сильный шторм",
+    "10": "Жестокий шторм",
+    "11": "Очень жестокий шторм",
+    "12": "Ураган"
   }
 }
