--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -78,5 +78,16 @@
     "10": "Жестокий шторм",
     "11": "Очень жестокий шторм",
     "12": "Ураган"
+  },
+  "moon": {
+    "moon": "Луна",
+    "new_moon": "Новолуние",
+    "waxing_crescent": "Растущий серп",
+    "first_quarter": "Первая четверть",
+    "waxing_gibbous": "Растущий полумесяц",
+    "full_moon": "Полнолуние",
+    "waning_gibbous": "Убывающий полумесяц",
+    "last_quarter": "Последняя четверть",
+    "waning_crescent": "Убывающий серп"
   }
 }
