--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -78,5 +78,16 @@
     "10": "Storm, whole gale",
     "11": "Violent storm",
     "12": "Hurricane"
+  },
+  "moon": {
+    "moon": "Moon",
+    "new_moon": "New Moon",
+    "waxing_crescent": "Waxing Crescent",
+    "first_quarter": "First Quarter",
+    "waxing_gibbous": "Waxing Gibbous",
+    "full_moon": "Full Moon",
+    "waning_gibbous": "Waning Gibbous",
+    "last_quarter": "Last Quarter",
+    "waning_crescent": "Waning Crescent"
   }
 }
