--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -46,6 +46,7 @@
       "99": "гроза с градом"
     }
   },
+  "feels_like": "Ощущается как",
   "forecast": {
     "week_forecast": "Погода на неделю",
     "day": "День",
