--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -103,5 +103,8 @@
   "cities": {
     "delete_cities": "Delete cities",
     "weather_other_cities": "Weather in other cities"
+  },
+  "footer": {
+    "open_meteo": "Weather data by"
   }
 }
