--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -103,9 +103,11 @@
   "cities": {
     "delete_cities": "Удалить города",
     "weather_other_cities": "Погода в других городах",
-    "save_cities_advice": "Начните сохранять города нажав на кнопку дискеты"
+    "save_cities_advice": "Начните сохранять города нажав на кнопку дискеты",
+    "edit_cities": "Редактировать города"
   },
   "footer": {
     "open_meteo": "Погодные данные от"
-  }
+  },
+  "save_city": "Сохранить город"
 }
