a11y for change language button

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -111,5 +111,6 @@
   "footer": {
     "open_meteo": "Погодные данные от"
   },
-  "save_city": "Сохранить город"
+  "save_city": "Сохранить город",
+  "change_language": "Change language"
 }
