--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -111,5 +111,6 @@
   "footer": {
     "open_meteo": "Weather data by"
   },
-  "save_city": "Save city"
+  "save_city": "Save city",
+  "change_language": "Change language"
 }
