--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -112,5 +112,5 @@
     "open_meteo": "Погодные данные от"
   },
   "save_city": "Сохранить город",
-  "change_language": "Change language"
+  "change_language": "Изменить язык"
 }
